[package]
name = "korabo-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.8.14"
aws-sdk-dynamodb = "1.106.0"
aws-sdk-ssm = "1.105.0"
axum = "0.8.8"
chrono = "0.4.43"
jsonwebtoken = "10.3.0"
lambda_http = "1.0.0"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = "1.49.0"
uuid = { version = "1.21.0", features = ["v4"] }
serde = { version = "1.0.228", features = ["derive"] }
argon2 = { version = "0.5.3", features = ["std"] }

