[package]
name = "korabo-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.8.14"
aws-sdk-dynamodb = "1.106.0"
aws-sdk-ssm = "1.105.0"
axum = "0.8.8"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
lambda_http = "1.0.0"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = "1.49.0"
uuid = { version = "1.21.0", features = ["v4"] }
serde = { version = "1.0.228", features = ["derive"] }
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
sha2 = "0.10.9"
hex = "0.4.3"
axum-extra = { version = "0.12.5", features = ["cookie"] }
time = { version = "0.3.47", features = ["formatting"] }
claims = { git = "https://github.com/AhmadAiman2013/korabo-common.git", tag = "v0.1.0" }
